--- a/assets/postcss/components/_tab.css
+++ b/assets/postcss/components/_tab.css
@@ -27,7 +27,7 @@
     .tab {
       @apply flex flex-col gap-1 justify-center items-center;
       &.tabs-bordered {
-        @apply transition-all border-b border-border-light py-2 px-3;
+        @apply transition-all border-b border-border-light dark:border-border-dark dark:border-b py-2 px-3;
 
         &.tab-active {
           @apply border-b-2 border-primary text-primary;
@@ -72,7 +72,7 @@
       }
 
       &.tabs-vertical {
-        @apply transition-all border-r border-border-light p-2 sm:border-r-0 sm:border-b;
+        @apply transition-all border-r border-border-light dark:border-border-dark dark:border-r p-2 sm:border-r-0 sm:border-b;
 
         &.tab-active {
           @apply border-r-2 border-primary text-primary sm:border-r-0 sm:border-b-2;
