--- a/html/template/button.html
+++ b/html/template/button.html
@@ -1009,7 +1009,7 @@
                 <div class="card-header pb-2 header-bottom-border">
                   <div class="flex flex-col">
                     <h3 class="text-lg font-bold">Buttons</h3>
-                    <p>Use  <strong>.btn </strong> class to add btn.</p>
+                    <p>Use<strong>.btn </strong> class to add btn.</p>
                     <div class="preview-code tab-links">
                       <button class="p-0 tab tab-lifted tab-active tab-link" data-tabFilter="1">Preview  </button>
                       <button class="p-0 tab tab-lifted tab-link tab-2" data-tabFilter="2">Html</button>
@@ -1403,23 +1403,23 @@
                     </div>
                   </div>
                 </div>
-                <div class="card-body">                                  
+                <div class="card-body">                
                   <div class="tabs-content">
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex flex-wrap gap-2">
                         <div class="inline-flex rounded-none flex-wrap">
-                          <button class="py-2 px-3 text-sm font-medium text-white bg-primary rounded-none border border-gray-200 hover:bg-primary hover:text-white focus:text-white focus:bg-primary ">Profile</button>
-                          <button class="py-2 px-3 text-sm font-medium text-gray-900 bg-white rounded-none border-t border-b border-gray-200 hover:bg-primary hover:text-white focus:text-white focus:bg-primary">Setting</button>
-                          <button class="py-2 px-3 text-sm font-medium text-gray-900 bg-white rounded-none border border-gray-200 hover:bg-primary hover:text-white focus:text-white focus:bg-primary">Message</button>
+                          <button class="py-2 px-3 text-sm font-medium text-white bg-primary rounded-none border border-gray-200 hover:bg-primary hover:text-white focus:text-white focus:bg-primary  dark:border-border-dark ">Profile</button>
+                          <button class="py-2 px-3 text-sm font-medium text-gray-900 bg-white rounded-none border-t border-b border-gray-200 hover:bg-primary hover:text-white focus:text-white focus:bg-primary dark:border-border-dark dark:bg-sidebar-dark2 dark:text-white dark:hover:bg-primary dark:hover:text-white dark:focus:text-white dark:focus:bg-primary">Setting</button>
+                          <button class="py-2 px-3 text-sm font-medium text-gray-900 bg-white rounded-none border border-gray-200 hover:bg-primary hover:text-white focus:text-white focus:bg-primary dark:border-border-dark dark:bg-sidebar-dark2 dark:text-white dark:hover:bg-primary dark:hover:text-white dark:focus:text-white dark:focus:bg-primary">Message</button>
                         </div>
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
                       <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark2 dark:hover:text-white"> <i data-feather="clipboard"></i></button>
                       <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt;
-   &lt;button class="px-3 py-2 text-sm font-medium text-white border border-gray-200 rounded-none bg-primary hover:bg-primary hover:text-white focus:text-white focus:bg-primary"&gt;Profile&lt;/button&gt;
-   &lt;button class="px-3 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-none hover:bg-primary hover:text-white focus:text-white focus:bg-primary"&gt;Setting&lt;/button&gt;
-   &lt;button class="px-3 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-none hover:bg-primary hover:text-white focus:text-white focus:bg-primary"&gt;Message&lt;/button&gt;
+   &lt;button class="px-3 py-2 text-sm font-medium text-white border border-gray-200 rounded-none bg-primary hover:bg-primary hover:text-white focus:text-white focus:bg-primary  dark:border-border-dark "&gt;Profile&lt;/button&gt;
+   &lt;button class="px-3 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-none hover:bg-primary hover:text-white focus:text-white focus:bg-primary dark:border-border-dark dark:bg-sidebar-dark2 dark:text-white dark:hover:bg-primary dark:hover:text-white dark:focus:text-white dark:focus:bg-primary "&gt;Setting&lt;/button&gt;
+   &lt;button class="px-3 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-none hover:bg-primary hover:text-white focus:text-white focus:bg-primary dark:border-border-dark dark:bg-sidebar-dark2 dark:text-white dark:hover:bg-primary dark:hover:text-white dark:focus:text-white dark:focus:bg-primary "&gt;Message&lt;/button&gt;
 &lt;/div&gt;</code></pre>
                     </div>
                   </div>
@@ -1437,92 +1437,92 @@
         </div>
       </div>
     </main>
-    <!-- Customizer-->
-    <div class="bg-white customizer-sidebar dark:bg-sidebar-dark2">
-      <div class="flex rtl:flex items-center text-title bg-primary justify-between  p-[15px] shadow-md"> <span class="text-base font-semibold text-white">Customizer</span>
-        <button class="customizer-close"> <i class="w-4 h-4 stroke-white" data-feather="x"></i></button>
-      </div>
-      <div class="py-[4px] dark:bg-mode-200">
-        <div class="px-[15px] py-7  h-[calc(100vh_-_139px)] overflow-auto ">
-          <ul class="flex flex-col gap-7 mode-event">  
-            <li>
-              <div>
-                <h5 class="leading-none text-dark text-sm font-semibold">Template Mode</h5><span class="leading-none text-content text-xs font-medium">Choose template mode dark & light</span>
-              </div>
-              <div class="mt-2">
-                <ul class="flex items-center gap-3 flex-wrap"> 
-                  <li class="relative">
-                    <input class="absolute invisible opacity-0 peer" checked id="light-checked" type="radio" name="mode"><i class="stroke-primary z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
-                    <label class="block overflow-hidden border shadow-md mode-theme-light border-light rounded-5" for="light-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/light.png" alt="light"></label>
-                  </li>
-                  <li class="relative">
-                    <input class="absolute invisible opacity-0 peer" id="dark-checked" type="radio" name="mode"><i class="stroke-white z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
-                    <label class="block overflow-hidden border shadow-md mode-theme-dark border-light rounded-5" for="dark-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/dark.png" alt="dark"></label>
-                  </li>
-                </ul>
-              </div>
-            </li>
-            <li>
-              <div>
-                <h5 class="leading-none text-dark text-sm font-semibold">Layout Type</h5><span class="leading-none text-content text-xs">Choose layout Ltr & Rtl</span>
-              </div>
-              <div class="mt-2">
-                <ul class="flex items-center gap-3">
-                  <li class="relative">
-                    <input class="absolute invisible opacity-0 peer" checked id="ltr-checked" type="radio" name="dir"><i class="stroke-primary z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
-                    <label class="block overflow-hidden border shadow-md layout-ltr border-light rounded-5" for="ltr-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/ltr.png" alt="ltr"></label>
-                  </li>
-                  <li class="relative"> 
-                    <input class="absolute invisible opacity-0 peer" id="rtl-checked" type="radio" name="dir"><i class="stroke-white z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
-                    <label class="block overflow-hidden border shadow-md layout-rtl border-light rounded-5" for="rtl-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/rtl.png" alt="rtl"></label>
-                  </li>
-                </ul>
-              </div>
-            </li>
-            <li>
-              <div>
-                <h5 class="leading-none text-dark text-sm font-semibold">Sidebar Type</h5><span class="leading-none text-content text-xs">Choose Sidebar  icon & full</span>
-              </div>
-              <div class="mt-2">
-                <ul class="flex items-center gap-3">
-                  <li class="relative">
-                    <input class="absolute invisible opacity-0 peer" checked id="full-sidebar" type="radio" name="sidebar-type"><i class="stroke-primary z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
-                    <label class="block overflow-hidden border shadow-md sidebar-full border-light rounded-5" for="full-sidebar"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/full-sidebar.png" alt="full sidebar"></label>
-                  </li>
-                  <li class="relative"> 
-                    <input class="absolute invisible opacity-0 peer" id="icon-sidebar" type="radio" name="sidebar-type"><i class="stroke-primary z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
-                    <label class="block overflow-hidden border shadow-md sidebar-icon border-light rounded-5" for="icon-sidebar"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/icon-sidebar.png" alt="icon sidebar"></label>
-                  </li>
-                </ul>
-              </div>
-            </li>
-            <li>
-              <div class="flex items-center justify-between"> <span class="text-sm font-semobold text-title">Monochrome Mode</span>
-                <label class="inline-flex relative items-center cursor-pointer">
-                  <input class="sr-only peer monochrome toggle toggle-primary" name="monochrome" type="checkbox" id="monochrome"><span class="w-7 h-4 bg-content rounded-full peer peer-focus:outline-none peer-checked:after:translate-x-full peer-checked:after:content-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-light after:border after:rounded-full after:h-3 after:w-3 after:transition-all peer-checked:bg-primary"></span>
-                </label>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="flex items-center gap-2 p-[15px] border-t border-light dark:bg-primaryLight"> 
-        <button class="btn btn-ghost flex-1 reset-customizer">Reset  </button>
-        <button class="btn btn-primary text-white flex-1">Buy Now</button>
-      </div>
-    </div>
   </body>
-  <!-- Feather Icon Js -->
-  <script src="../../assets/js/feather.min.js"></script>
-  <script src="../../assets/js/feather-custom.js"></script>
-  <!-- Select Js -->
-  <script src="../../assets/js/custom-select.js"></script>
-  <!-- prism js-->
-  <script src="../../assets/js/prism.js"></script>
-  <!-- Sidebar Js -->
-  <script src="../../assets/js/sidebar.js"></script>
-  <!-- customizer js-->
-  <script src="../../assets/js/customizer.js"> </script>
-  <!-- Custom script   -->
-  <script src="../../assets/js/script.js">  </script>
 </html>
+<!-- Customizer-->
+<div class="bg-white customizer-sidebar dark:bg-sidebar-dark2">
+  <div class="flex rtl:flex items-center text-title bg-primary justify-between  p-[15px] shadow-md"> <span class="text-base font-semibold text-white">Customizer</span>
+    <button class="customizer-close"> <i class="w-4 h-4 stroke-white" data-feather="x"></i></button>
+  </div>
+  <div class="py-[4px] dark:bg-mode-200">
+    <div class="px-[15px] py-7  h-[calc(100vh_-_139px)] overflow-auto ">
+      <ul class="flex flex-col gap-7 mode-event">  
+        <li>
+          <div>
+            <h5 class="leading-none text-dark text-sm font-semibold">Template Mode</h5><span class="leading-none text-content text-xs font-medium">Choose template mode dark & light</span>
+          </div>
+          <div class="mt-2">
+            <ul class="flex items-center gap-3 flex-wrap"> 
+              <li class="relative">
+                <input class="absolute invisible opacity-0 peer" checked id="light-checked" type="radio" name="mode"><i class="stroke-primary z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
+                <label class="block overflow-hidden border shadow-md mode-theme-light border-light rounded-5" for="light-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/light.png" alt="light"></label>
+              </li>
+              <li class="relative">
+                <input class="absolute invisible opacity-0 peer" id="dark-checked" type="radio" name="mode"><i class="stroke-white z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
+                <label class="block overflow-hidden border shadow-md mode-theme-dark border-light rounded-5" for="dark-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/dark.png" alt="dark"></label>
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h5 class="leading-none text-dark text-sm font-semibold">Layout Type</h5><span class="leading-none text-content text-xs">Choose layout Ltr & Rtl</span>
+          </div>
+          <div class="mt-2">
+            <ul class="flex items-center gap-3">
+              <li class="relative">
+                <input class="absolute invisible opacity-0 peer" checked id="ltr-checked" type="radio" name="dir"><i class="stroke-primary z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
+                <label class="block overflow-hidden border shadow-md layout-ltr border-light rounded-5" for="ltr-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/ltr.png" alt="ltr"></label>
+              </li>
+              <li class="relative"> 
+                <input class="absolute invisible opacity-0 peer" id="rtl-checked" type="radio" name="dir"><i class="stroke-white z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
+                <label class="block overflow-hidden border shadow-md layout-rtl border-light rounded-5" for="rtl-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/rtl.png" alt="rtl"></label>
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h5 class="leading-none text-dark text-sm font-semibold">Sidebar Type</h5><span class="leading-none text-content text-xs">Choose Sidebar  icon & full</span>
+          </div>
+          <div class="mt-2">
+            <ul class="flex items-center gap-3">
+              <li class="relative">
+                <input class="absolute invisible opacity-0 peer" checked id="full-sidebar" type="radio" name="sidebar-type"><i class="stroke-primary z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
+                <label class="block overflow-hidden border shadow-md sidebar-full border-light rounded-5" for="full-sidebar"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/full-sidebar.png" alt="full sidebar"></label>
+              </li>
+              <li class="relative"> 
+                <input class="absolute invisible opacity-0 peer" id="icon-sidebar" type="radio" name="sidebar-type"><i class="stroke-primary z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
+                <label class="block overflow-hidden border shadow-md sidebar-icon border-light rounded-5" for="icon-sidebar"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/icon-sidebar.png" alt="icon sidebar"></label>
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <div class="flex items-center justify-between"> <span class="text-sm font-semobold text-title">Monochrome Mode</span>
+            <label class="inline-flex relative items-center cursor-pointer">
+              <input class="sr-only peer monochrome toggle toggle-primary" name="monochrome" type="checkbox" id="monochrome"><span class="w-7 h-4 bg-content rounded-full peer peer-focus:outline-none peer-checked:after:translate-x-full peer-checked:after:content-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-light after:border after:rounded-full after:h-3 after:w-3 after:transition-all peer-checked:bg-primary"></span>
+            </label>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="flex items-center gap-2 p-[15px] border-t border-light dark:bg-primaryLight"> 
+    <button class="btn btn-ghost flex-1 reset-customizer">Reset  </button>
+    <button class="btn btn-primary text-white flex-1">Buy Now</button>
+  </div>
+</div>
+<!-- Feather Icon Js -->
+<script src="../../assets/js/feather.min.js"></script>
+<script src="../../assets/js/feather-custom.js"></script>
+<!-- Select Js -->
+<script src="../../assets/js/custom-select.js"></script>
+<!-- prism js-->
+<script src="../../assets/js/prism.js"></script>
+<!-- Sidebar Js -->
+<script src="../../assets/js/sidebar.js"></script>
+<!-- customizer js-->
+<script src="../../assets/js/customizer.js"> </script>
+<!-- Custom script   -->
+<script src="../../assets/js/script.js">  </script>
