--- a/html/template/wow-animation.html
+++ b/html/template/wow-animation.html
@@ -1001,7 +1001,7 @@
           </aside>
         </div>
         <!-- Sidebar End-->
-        <!-- Page Body Start -->
+        <!-- Page Body Start-->
         <div class="page-body">
           <div class="grid grid-cols-12 gap-card-gap">
             <div class="col-span-4 2xl:col-span-6 2md:col-span-12">
@@ -1016,7 +1016,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="card-body">                                  
+                <div class="card-body">
                   <div class="tabs-content">
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex items-center justify-center flex-wrap gap-2 w-full overflow-hidden">
@@ -1434,21 +1434,17 @@
                       </div>
                       <div class="tabs-content">
                         <div class="tab-pan fade active show first:rounded-tl-none rounded-5" data-tabContent="1"></div>
-                        <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i>
-                          <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"></pre>
-                        </button><code class="dark:bg-sidebar-dark2">
-                            &lt;!-- you just need to true the wow variable in page --&gt;
-                            -var wow=true;</code>
+                        <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                        <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">  &lt;!-- you just need to true the wow variable in page --&gt;
+  -var wow=true;</code></pre>
                         <div class="relative tab-pan fade group first:rounded-tl-none rounded-5" data-tabContent="2"></div>
-                        <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i>
-                          <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"></pre>
-                        </button><code class="dark:bg-sidebar-dark2">
-                            &lt;script src="../../assets/js/wow.js"&gt; &lt;/script&gt;
-                            &lt;script src="../../assets/js/wow-custom.js"&gt; &lt;/script&gt;</code>
+                        <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                        <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">  &lt;script src="../../assets/js/wow.js"&gt; &lt;/script&gt;
+  &lt;script src="../../assets/js/wow-custom.js"&gt; &lt;/script&gt;</code></pre>
                       </div>
                     </div>
                   </div>
-                  <p class="pt-2">All set&#128525; Now you can see animations will be revealed when the page scrolls.             </p>
+                  <p class="pt-2">All set&#128525; Now you can see animations will be revealed when the page scrolls.</p>
                 </div>
               </div>
             </div>
@@ -1463,95 +1459,95 @@
         </div>
       </div>
     </main>
-    <!-- Customizer-->
-    <div class="bg-white customizer-sidebar dark:bg-sidebar-dark2">
-      <div class="flex rtl:flex items-center text-title bg-primary justify-between  p-[15px] shadow-md"> <span class="text-base font-semibold text-white">Customizer</span>
-        <button class="customizer-close"> <i class="w-4 h-4 stroke-white" data-feather="x"></i></button>
-      </div>
-      <div class="py-[4px] dark:bg-mode-200">
-        <div class="px-[15px] py-7  h-[calc(100vh_-_139px)] overflow-auto ">
-          <ul class="flex flex-col gap-7 mode-event">  
-            <li>
-              <div>
-                <h5 class="leading-none text-dark text-sm font-semibold">Template Mode</h5><span class="leading-none text-content text-xs font-medium">Choose template mode dark & light</span>
-              </div>
-              <div class="mt-2">
-                <ul class="flex items-center gap-3 flex-wrap"> 
-                  <li class="relative">
-                    <input class="absolute invisible opacity-0 peer" checked id="light-checked" type="radio" name="mode"><i class="stroke-primary z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
-                    <label class="block overflow-hidden border shadow-md mode-theme-light border-light rounded-5" for="light-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/light.png" alt="light"></label>
-                  </li>
-                  <li class="relative">
-                    <input class="absolute invisible opacity-0 peer" id="dark-checked" type="radio" name="mode"><i class="stroke-white z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
-                    <label class="block overflow-hidden border shadow-md mode-theme-dark border-light rounded-5" for="dark-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/dark.png" alt="dark"></label>
-                  </li>
-                </ul>
-              </div>
-            </li>
-            <li>
-              <div>
-                <h5 class="leading-none text-dark text-sm font-semibold">Layout Type</h5><span class="leading-none text-content text-xs">Choose layout Ltr & Rtl</span>
-              </div>
-              <div class="mt-2">
-                <ul class="flex items-center gap-3">
-                  <li class="relative">
-                    <input class="absolute invisible opacity-0 peer" checked id="ltr-checked" type="radio" name="dir"><i class="stroke-primary z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
-                    <label class="block overflow-hidden border shadow-md layout-ltr border-light rounded-5" for="ltr-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/ltr.png" alt="ltr"></label>
-                  </li>
-                  <li class="relative"> 
-                    <input class="absolute invisible opacity-0 peer" id="rtl-checked" type="radio" name="dir"><i class="stroke-white z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
-                    <label class="block overflow-hidden border shadow-md layout-rtl border-light rounded-5" for="rtl-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/rtl.png" alt="rtl"></label>
-                  </li>
-                </ul>
-              </div>
-            </li>
-            <li>
-              <div>
-                <h5 class="leading-none text-dark text-sm font-semibold">Sidebar Type</h5><span class="leading-none text-content text-xs">Choose Sidebar  icon & full</span>
-              </div>
-              <div class="mt-2">
-                <ul class="flex items-center gap-3">
-                  <li class="relative">
-                    <input class="absolute invisible opacity-0 peer" checked id="full-sidebar" type="radio" name="sidebar-type"><i class="stroke-primary z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
-                    <label class="block overflow-hidden border shadow-md sidebar-full border-light rounded-5" for="full-sidebar"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/full-sidebar.png" alt="full sidebar"></label>
-                  </li>
-                  <li class="relative"> 
-                    <input class="absolute invisible opacity-0 peer" id="icon-sidebar" type="radio" name="sidebar-type"><i class="stroke-primary z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
-                    <label class="block overflow-hidden border shadow-md sidebar-icon border-light rounded-5" for="icon-sidebar"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/icon-sidebar.png" alt="icon sidebar"></label>
-                  </li>
-                </ul>
-              </div>
-            </li>
-            <li>
-              <div class="flex items-center justify-between"> <span class="text-sm font-semobold text-title">Monochrome Mode</span>
-                <label class="inline-flex relative items-center cursor-pointer">
-                  <input class="sr-only peer monochrome toggle toggle-primary" name="monochrome" type="checkbox" id="monochrome"><span class="w-7 h-4 bg-content rounded-full peer peer-focus:outline-none peer-checked:after:translate-x-full peer-checked:after:content-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-light after:border after:rounded-full after:h-3 after:w-3 after:transition-all peer-checked:bg-primary"></span>
-                </label>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="flex items-center gap-2 p-[15px] border-t border-light dark:bg-primaryLight"> 
-        <button class="btn btn-ghost flex-1 reset-customizer">Reset  </button>
-        <button class="btn btn-primary text-white flex-1">Buy Now</button>
-      </div>
-    </div>
   </body>
-  <!-- Feather Icon Js -->
-  <script src="../../assets/js/feather.min.js"></script>
-  <script src="../../assets/js/feather-custom.js"></script>
-  <!-- Select Js -->
-  <script src="../../assets/js/custom-select.js"></script>
-  <!-- prism js-->
-  <script src="../../assets/js/prism.js"></script>
-  <!-- Sidebar Js -->
-  <script src="../../assets/js/sidebar.js"></script>
-  <!-- wow animation js-->
-  <script src="../../assets/js/wow.js"></script>
-  <script src="../../assets/js/wow-custom.js"></script>
-  <!-- customizer js-->
-  <script src="../../assets/js/customizer.js"> </script>
-  <!-- Custom script   -->
-  <script src="../../assets/js/script.js">  </script>
 </html>
+<!-- Customizer-->
+<div class="bg-white customizer-sidebar dark:bg-sidebar-dark2">
+  <div class="flex rtl:flex items-center text-title bg-primary justify-between  p-[15px] shadow-md"> <span class="text-base font-semibold text-white">Customizer</span>
+    <button class="customizer-close"> <i class="w-4 h-4 stroke-white" data-feather="x"></i></button>
+  </div>
+  <div class="py-[4px] dark:bg-mode-200">
+    <div class="px-[15px] py-7  h-[calc(100vh_-_139px)] overflow-auto ">
+      <ul class="flex flex-col gap-7 mode-event">  
+        <li>
+          <div>
+            <h5 class="leading-none text-dark text-sm font-semibold">Template Mode</h5><span class="leading-none text-content text-xs font-medium">Choose template mode dark & light</span>
+          </div>
+          <div class="mt-2">
+            <ul class="flex items-center gap-3 flex-wrap"> 
+              <li class="relative">
+                <input class="absolute invisible opacity-0 peer" checked id="light-checked" type="radio" name="mode"><i class="stroke-primary z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
+                <label class="block overflow-hidden border shadow-md mode-theme-light border-light rounded-5" for="light-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/light.png" alt="light"></label>
+              </li>
+              <li class="relative">
+                <input class="absolute invisible opacity-0 peer" id="dark-checked" type="radio" name="mode"><i class="stroke-white z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
+                <label class="block overflow-hidden border shadow-md mode-theme-dark border-light rounded-5" for="dark-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/dark.png" alt="dark"></label>
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h5 class="leading-none text-dark text-sm font-semibold">Layout Type</h5><span class="leading-none text-content text-xs">Choose layout Ltr & Rtl</span>
+          </div>
+          <div class="mt-2">
+            <ul class="flex items-center gap-3">
+              <li class="relative">
+                <input class="absolute invisible opacity-0 peer" checked id="ltr-checked" type="radio" name="dir"><i class="stroke-primary z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
+                <label class="block overflow-hidden border shadow-md layout-ltr border-light rounded-5" for="ltr-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/ltr.png" alt="ltr"></label>
+              </li>
+              <li class="relative"> 
+                <input class="absolute invisible opacity-0 peer" id="rtl-checked" type="radio" name="dir"><i class="stroke-white z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
+                <label class="block overflow-hidden border shadow-md layout-rtl border-light rounded-5" for="rtl-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/rtl.png" alt="rtl"></label>
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h5 class="leading-none text-dark text-sm font-semibold">Sidebar Type</h5><span class="leading-none text-content text-xs">Choose Sidebar  icon & full</span>
+          </div>
+          <div class="mt-2">
+            <ul class="flex items-center gap-3">
+              <li class="relative">
+                <input class="absolute invisible opacity-0 peer" checked id="full-sidebar" type="radio" name="sidebar-type"><i class="stroke-primary z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
+                <label class="block overflow-hidden border shadow-md sidebar-full border-light rounded-5" for="full-sidebar"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/full-sidebar.png" alt="full sidebar"></label>
+              </li>
+              <li class="relative"> 
+                <input class="absolute invisible opacity-0 peer" id="icon-sidebar" type="radio" name="sidebar-type"><i class="stroke-primary z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
+                <label class="block overflow-hidden border shadow-md sidebar-icon border-light rounded-5" for="icon-sidebar"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/icon-sidebar.png" alt="icon sidebar"></label>
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <div class="flex items-center justify-between"> <span class="text-sm font-semobold text-title">Monochrome Mode</span>
+            <label class="inline-flex relative items-center cursor-pointer">
+              <input class="sr-only peer monochrome toggle toggle-primary" name="monochrome" type="checkbox" id="monochrome"><span class="w-7 h-4 bg-content rounded-full peer peer-focus:outline-none peer-checked:after:translate-x-full peer-checked:after:content-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-light after:border after:rounded-full after:h-3 after:w-3 after:transition-all peer-checked:bg-primary"></span>
+            </label>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="flex items-center gap-2 p-[15px] border-t border-light dark:bg-primaryLight"> 
+    <button class="btn btn-ghost flex-1 reset-customizer">Reset  </button>
+    <button class="btn btn-primary text-white flex-1">Buy Now</button>
+  </div>
+</div>
+<!-- Feather Icon Js -->
+<script src="../../assets/js/feather.min.js"></script>
+<script src="../../assets/js/feather-custom.js"></script>
+<!-- Select Js -->
+<script src="../../assets/js/custom-select.js"></script>
+<!-- prism js-->
+<script src="../../assets/js/prism.js"></script>
+<!-- Sidebar Js -->
+<script src="../../assets/js/sidebar.js"></script>
+<!-- wow animation js-->
+<script src="../../assets/js/wow.js"></script>
+<script src="../../assets/js/wow-custom.js"></script>
+<!-- customizer js-->
+<script src="../../assets/js/customizer.js"> </script>
+<!-- Custom script   -->
+<script src="../../assets/js/script.js">  </script>
