Chat App & email changes

--- a/assets/postcss/pages/_steps.css
+++ b/assets/postcss/pages/_steps.css
@@ -37,16 +37,35 @@
         &:after {
           @apply bg-secondary text-white;
         }
-        &.roman-step{
-            counter-reset: my-sec-counter;
-            .step{
-                &:after{
-                    /* counter-reset: my-sec-counter; */
-                    counter-increment: my-sec-counter;
-                    content: counter(my-sec-counter, upper-roman);
-                }
-            }
+      }
+
+      &.step-info {
+        &:before,
+        &:after {
+          @apply bg-info text-white;
         }
+      }
+
+      &.step-success {
+        &:before,
+        &:after {
+          @apply bg-success text-white;
+        }
+      }
+
+      &.step-warning {
+        &:before,
+        &:after {
+          @apply bg-warning text-white;
+        }
+      }
+
+      &.step-danger {
+        &:before,
+        &:after {
+          @apply bg-danger text-white;
+        }
+      }
     }
 
     &.responsive-vertical {
@@ -57,6 +76,16 @@
 
         &:before {
           @apply h-full w-2 -translate-x-1/2 -translate-y-1/2 ml-[50%] rtl:ml-unset rtl:mr-[30%];
+        }
+      }
+    }
+    &.roman-step {
+      counter-reset: my-sec-counter;
+      .step {
+        &:after {
+          /* counter-reset: my-sec-counter; */
+          counter-increment: my-sec-counter;
+          content: counter(my-sec-counter, upper-roman);
         }
       }
     }
