--- a/assets/pug/pages/template/indicator.pug
+++ b/assets/pug/pages/template/indicator.pug
@@ -112,7 +112,7 @@ html(lang='en')
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
                       div.flex.flex-wrap.gap-2
                         div.indicator.mt-2
-                          span.indicator-item.badge.bg-secondary.text-white.rounded-full(class="top-[-0.9375rem] right-[-2.125rem] rtl:left-[-2.125rem] rtl:right-unset !py-1 !px-2") Update
+                          span.indicator-item.badge.bg-secondary.text-white.rounded-full(class="top-[-0.9375rem] right-[-2.125rem] rtl:left-[-2.125rem] rtl:right-unset !py-1 !px-2 dark:border-border-dark") Update
                           div(class="dark:bg-sidebar-dark2 h-[4.25rem] sm:text-xs").grid.bg-gray-light.text-title.w-28.place-content-center.p-2 Latest
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")   
@@ -121,7 +121,7 @@ html(lang='en')
                         code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-wrap gap-2"&gt;
                           |    &lt;div class="mt-2 indicator"&gt;
-                          |       &lt;span class="indicator-item badge bg-secondary text-white rounded-full top-[-0.9375rem] right-[-2.125rem] rtl:left-[-2.125rem] rtl:right-unset !py-1 !px-2"&gt; Update &lt;/span&gt;
+                          |       &lt;span class="indicator-item badge bg-secondary text-white rounded-full top-[-0.9375rem] right-[-2.125rem] rtl:left-[-2.125rem] rtl:right-unset !py-1 !px-2 dark:border-border-dark"&gt; Update &lt;/span&gt;
                           |       &lt;div class="grid h-[4.25rem] p-2 bg-gray-light text-title w-28 place-content-center"&gt; Latest Version &lt;/div&gt;
                           |   &lt;/div&gt; 
                           |&lt;/div&gt;
@@ -142,7 +142,7 @@ html(lang='en')
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
                       div.flex.flex-wrap.gap-2
                         div.indicator.mt-2
-                          p.indicator-item.active-process.waving-text.w-max.text-3xs 
+                          p.indicator-item.active-process.waving-text.w-max.text-3xs(class="dark:border-border-dark")
                             span T 
                             span y
                             span p 
@@ -183,7 +183,7 @@ html(lang='en')
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
                       div.flex.flex-wrap.gap-2
                         div.indicator.mt-2
-                          span.indicator-item.badge.bg-white.border-2.shadow-lg.text-title.rounded-full(class="dark:bg-sidebar-dark2 top-[-0.9375rem] right-[-1.25rem] rtl:right-unset rtl:left-[-1.25rem] !py-1 !px-2 !border-gray-light text-3xs") +99
+                          span.indicator-item.badge.bg-white.border-2.shadow-lg.text-title.rounded-full(class="dark:bg-sidebar-dark2 top-[-0.9375rem] right-[-1.25rem] rtl:right-unset rtl:left-[-1.25rem] !py-1 !px-2 border-gray-light dark:border-border-dark") +99
                           button.btn.btn-info.text-white(class="sm:text-xs") Notification
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")   
@@ -192,11 +192,10 @@ html(lang='en')
                         code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-wrap gap-2"&gt;
                           |    &lt;div class="mt-2 indicator"&gt;
-                          |       &lt;span class="dark:bg-sidebar-dark2 sm:text-xs indicator-item badge bg-white border-2 !border-gray-light shadow-lg text-title rounded-full top-[-0.9375rem] right-[-1.25rem] rtl:right-unset rtl:left-[-1.25rem] !py-1 !px-2 text-3xs"&gt; +99 &lt;/span&gt;
+                          |       &lt;span class="dark:bg-sidebar-dark2 indicator-item badge bg-white border-2 border-gray-light shadow-lg text-title rounded-full top-[-0.9375rem] right-[-1.25rem] rtl:right-unset rtl:left-[-1.25rem] !py-1 !px-2 dark:border-border-dark"&gt; +99 &lt;/span&gt;
                           |       &lt;button class="text-white btn btn-info"&gt; Notification &lt;/button&gt;
                           |    &lt;/div&gt; 
                           |&lt;/div&gt;
-
             div.col-span-4(class="2xl:col-span-6 2md:col-span-12")
               div.card.tabs
                 div.card-header.pb-2.header-bottom-border
@@ -245,7 +244,7 @@ html(lang='en')
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
                       div.flex.flex-wrap.gap-2
                         div.indicator.mt-2
-                          span.indicator-item.badge.bg-secondary.text-white.rounded-full(class="top-[-0.9375rem] right-[-2.125rem] rtl:left-[-2.125rem] rtl:right-unset !py-1 !px-2") Required
+                          span.indicator-item.badge.bg-secondary.text-white.rounded-full(class="top-[-0.9375rem] right-[-2.125rem] rtl:left-[-2.125rem] rtl:right-unset !py-1 !px-2 dark:border-border-dark") Required
                           input(type="email" placeholder="Enter your id.." class="bg-gray-light rounded-5 w-full py-[0.6875rem] pl-[1.5625rem] sm:pl-[0.625rem] pr-[3.4375rem] sm:pr-0 text-xs font-semibold text-title dark:bg-sidebar-dark2")
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")   
@@ -254,11 +253,10 @@ html(lang='en')
                         code(class="dark:bg-sidebar-dark2")
                           |&lt;div class="flex flex-wrap gap-2"&gt;
                           |    &lt;div class="mt-2 indicator"&gt;
-                          |       &lt;span class="indicator-item badge bg-secondary text-white rounded-full top-[10.9375rem] right[-2.125rem] rtl:left-[-2.125rem] rtl:right-unset !py-1 !px-2"&gt; Required &lt;/span&gt;
+                          |       &lt;span class="indicator-item badge bg-secondary text-white rounded-full top-[10.9375rem] right[-2.125rem] rtl:left-[-2.125rem] rtl:right-unset !py-1 !px-2 dark:border-border-dark"&gt; Required &lt;/span&gt;
                           |       &lt;input type="email" placeholder="Enter your id.." class="bg-gray-light rounded-5 w-full py-[0.6875rem] pl-[1.5625rem] pr-[3.4375rem] text-xs font-semibold text-title"&gt;
                           |    &lt;/div&gt; 
                           |&lt;/div&gt;
-
             div.col-span-4(class="2xl:col-span-6 2md:col-span-12")
               div.card.tabs
                 div.card-header.pb-2.header-bottom-border
@@ -277,7 +275,7 @@ html(lang='en')
                         div.flex.mt-2
                           button.tab.tabs-bordered.tabs-bordered-bg(data-tabFilter="1" class="tab-link") Title 
                           button.indicator.tab.tabs-bordered.tabs-bordered-bg.tab-active.tab-link(data-tabFilter="2" class="tab-link") Description
-                            span.indicator-item.badge.bg-primary.text-white.rounded-full(class="-top-3 right-[-1.25rem] rtl:right-unset rtl:left-[-1.25rem] !p-1") +10
+                            span.indicator-item.badge.bg-primary.text-white.rounded-full(class="top-[-1.25rem] right-[-1.25rem] rtl:right-unset rtl:left-[-1.25rem] !p-1 dark:border-border-dark") +10
                           button.tab.tabs-bordered.tabs-bordered-bg(data-tabFilter="3" class="tab-link") Others
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")   
@@ -288,7 +286,7 @@ html(lang='en')
                           |    &lt;div class="flex mb-1"&gt;
                           |       &lt;button class="tab tab-bordered tabs-bordered-bg data-tabFilter="1" tab-link"&gt; Title &lt;/button&gt;
                           |       &lt;button class="indicator mt-2 tab tab-bordered tabs-bordered-bg tab-active data-tabFilter="2" tab-link"&gt; Description &lt;/button&gt;
-                          |           &lt;span class="indicator-item badge bg-primary text-white rounded-full -top-3 right-[-1.25rem] rtl:right-unset rtl:left-[-1.25rem] !p-1"&gt; +10 &lt;/span&gt;
+                          |            &lt;span class="indicator-item badge bg-primary text-white rounded-full top-[-1.25rem] right-[-1.25rem] rtl:right-unset rtl:left-[-1.25rem] !p-1 dark:border-border-dark"&gt; +10 &lt;/span&gt;
                           |       &lt;button class="tab tab-bordered tabs-bordered-bg data-tabFilter="3" tab-link"&gt; Others &lt;/button&gt;
                           |   &lt;/div&gt; 
                           |&lt;/div&gt;
