--- a/assets/pug/pages/template/steps.pug
+++ b/assets/pug/pages/template/steps.pug
@@ -157,7 +157,7 @@ html(lang='en')
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
                       div.flex.items-center.flex-wrap.gap-2.w-full
                         ul.steps(class="overflow-auto custom-scroll")
-                          li.step Start
+                          li.step start
                           li.step.step-info 
                           li.step.step-info 
                           li.step.step-info 
@@ -180,7 +180,7 @@ html(lang='en')
                           li.step.step-danger 
                           li.step.step-danger 
                           li.step.step-danger  
-                          li.step.step-danger End
+                          li.step.step-danger end
                     div(data-tabContent="2" class="relative tab-pan copyParent group first:rounded-tl-none rounded-5")
                       button.btn.copyBtn(class="dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white")
                         i(data-feather="clipboard")
