--- a/html/template/rating.html
+++ b/html/template/rating.html
@@ -1049,8 +1049,8 @@
               <div class="card tabs">
                 <div class="card-header pb-2 header-bottom-border">
                   <div class="flex flex-col">
-                    <h3 class="text-lg font-bold">Rating Style</h3>
-                    <p>Set rating style using <strong>.rating  </strong>& <strong>.rating-start-2 </strong>class.</p>
+                    <h3 class="text-lg font-bold">Rating</h3>
+                    <p>Set different style rating using <strong>.rating  </strong>& <strong>.rating-start-2 </strong>class.</p>
                     <div class="preview-code tab-links">
                       <button class="p-0 tab tab-lifted tab-active tab-link" data-tabFilter="1">Preview  </button>
                       <button class="p-0 tab tab-lifted tab-link tab-2" data-tabFilter="2">Html</button>
@@ -1172,7 +1172,7 @@
               <div class="card tabs">
                 <div class="card-header pb-2 header-bottom-border">
                   <div class="flex flex-col">
-                    <h3 class="text-lg font-bold">Colored Rating</h3>
+                    <h3 class="text-lg font-bold">With Different Colors</h3>
                     <p>Use heart shape rating using <strong>.rating  </strong>& <strong>.rating-heart  </strong>class.</p>
                     <div class="preview-code tab-links">
                       <button class="p-0 tab tab-lifted tab-active tab-link" data-tabFilter="1">Preview  </button>
@@ -1185,11 +1185,11 @@
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex flex-wrap gap-2">
                         <div class="rating">
-                          <input class="rating-heart bg-primary peer peer-checked:bg-gray-light" type="radio" name="rating-5">
+                          <input class="rating-heart bg-danger peer peer-checked:bg-gray-light" type="radio" name="rating-5">
                           <input class="rating-heart bg-secondary peer peer-checked:bg-gray-light" type="radio" name="rating-5">
                           <input class="rating-heart bg-info peer peer-checked:bg-gray-light" type="radio" name="rating-5">
-                          <input class="rating-heart bg-success peer peer-checked:bg-gray-light" type="radio" name="rating-5" checked="">
-                          <input class="rating-heart bg-warning peer peer-checked:bg-gray-light" type="radio" name="rating-5">
+                          <input class="rating-heart bg-primary peer peer-checked:bg-gray-light" type="radio" name="rating-5" checked="">
+                          <input class="rating-heart bg-success peer peer-checked:bg-gray-light" type="radio" name="rating-5">
                         </div>
                       </div>
                     </div>
@@ -1197,11 +1197,11 @@
                       <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
                       <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="flex flex-wrap gap-2"&gt;
    &lt;div class="rating"&gt;
-       &lt;input class="rating-heart bg-primary peer peer-checked:bg-gray-light" type="radio" name="rating-5"&gt;
+       &lt;input class="rating-heart bg-danger peer peer-checked:bg-gray-light" type="radio" name="rating-5"&gt;
        &lt;input class="rating-heart bg-secondary peer peer-checked:bg-gray-light" type="radio" name="rating-5"&gt;
        &lt;input class="rating-heart bg-info peer peer-checked:bg-gray-light" type="radio" name="rating-5&gt;
-       &lt;input class="rating-heart bg-success peer peer-checked:bg-gray-light" type="radio" name="rating-5" checked=""&gt;
-       &lt;input class="rating-heart bg-warning peer peer-checked:bg-gray-light" type="radio" name="rating-5"&gt;
+       &lt;input class="rating-heart bg-primary peer peer-checked:bg-gray-light" type="radio" name="rating-5" checked=""&gt;
+       &lt;input class="rating-heart bg-success peer peer-checked:bg-gray-light" type="radio" name="rating-5"&gt;
    &lt;/div&gt; 
 &lt;/div&gt;</code></pre>
                     </div>
@@ -1213,7 +1213,7 @@
               <div class="card tabs">
                 <div class="card-header pb-2 header-bottom-border">
                   <div class="flex flex-col">
-                    <h3 class="text-lg font-bold">Rating with Text</h3>
+                    <h3 class="text-lg font-bold">Rating With Text</h3>
                     <p>Adding texts with rating.</p>
                     <div class="preview-code tab-links">
                       <button class="p-0 tab tab-lifted tab-active tab-link" data-tabFilter="1">Preview  </button>
