--- a/html/template/steps.html
+++ b/html/template/steps.html
@@ -1009,7 +1009,7 @@
                 <div class="card-header pb-2 header-bottom-border">
                   <div class="flex flex-col">
                     <h3 class="text-lg font-bold">Steps</h3>
-                    <p>Set steps for process using <strong>.steps </strong>&  <strong>.step   </strong>class.</p>
+                    <p>Set steps for process using <strong>.steps  </strong>&  <strong>.step   </strong>class.</p>
                     <div class="preview-code tab-links">
                       <button class="p-0 tab tab-lifted tab-active tab-link" data-tabFilter="1">Preview  </button>
                       <button class="p-0 tab tab-lifted tab-link tab-2" data-tabFilter="2">Html</button>
@@ -1023,7 +1023,7 @@
                         <ul class="steps w-full overflow-auto custom-scroll">
                           <li class="step step-primary !min-w-[7rem] first:before:hidden">Register </li>
                           <li class="step step-primary !min-w-[7rem]">Choose plan</li>
-                          <li class="step !min-w-[7rem]">Purchase</li>
+                          <li class="step !min-w-[7rem] ">Purchase</li>
                           <li class="step !min-w-[7rem]">Received </li>
                         </ul>
                       </div>
@@ -1138,7 +1138,7 @@
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
                       <div class="flex items-center flex-wrap gap-2 w-full">
                         <ul class="steps overflow-auto custom-scroll">
-                          <li class="step">Start</li>
+                          <li class="step">start</li>
                           <li class="step step-info"> </li>
                           <li class="step step-info"> </li>
                           <li class="step step-info"> </li>
@@ -1161,7 +1161,7 @@
                           <li class="step step-danger"> </li>
                           <li class="step step-danger"> </li>
                           <li class="step step-danger"> </li>
-                          <li class="step step-danger">End</li>
+                          <li class="step step-danger">end</li>
                         </ul>
                       </div>
                     </div>
